Hid second-level in mobile menu, fixed spacing in drop menus

--- a/wp-content/themes/Karma/css/_mobile.css
+++ b/wp-content/themes/Karma/css/_mobile.css
@@ -61,6 +61,11 @@ position: relative;
 top: auto;
 width: auto;
 }
+
+ul#tt-mobile-menu-list ul.sub-menu ul.sub-menu {
+    display:none;
+}
+
 ul#tt-mobile-menu-list ul.sub-menu li {
 border-top: 1px solid #313335;
 height: auto;
