--- a/wp-content/themes/Karma/style.css
+++ b/wp-content/themes/Karma/style.css
@@ -918,7 +918,7 @@ position:absolute;
 #menu-main-nav li strong {text-transform:uppercase;display:block;font-size:13px;letter-spacing: 0.6px;font-weight:800;}
 #menu-main-nav a {display:block;}
 #menu-main-nav a:hover {background-position:0 0;text-decoration:none;}
-#menu-main-nav .drop {width:236px;padding:0 1px 0 1px;position:absolute;left:-1px;top:52px;display:none;z-index:999;}
+#menu-main-nav .drop {width:236px;padding:0 1px 0 1px;position:absolute;left:-1px;top:32px;display:none;z-index:999;}
 #menu-main-nav .sub-menu {display: none;}
 #menu-main-nav .drop li.current-menu-item,
 #menu-main-nav .drop li.current_page_ancestor,
